--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Natalie Matic",
   "license": "MIT",
   "dependencies": {
+    "@js-joda/core": "^5.6.2",
     "js-joda": "^1.11.0"
   }
 }
